# indic_tagger

./: .gitignore  README.md  pipeline.py  requirements.txt  spacy_tagger.py  spacy_tagger_test.py  tagger_pipeline.py
anago/: utils.py
examples/: example_tagger.ipynb
lstmcrf/: models.py  preprocessing.py  tagger.py  trainer.py  utils.py  wrapper.py
models/Kan/: crf.chunk.utf.model  crf.pos.utf.model
models/be/: crf.pos.utf.model
models/bn/: crf.chunk.utf.model  crf.ner.utf.model
models/hi/: crf.chunk.utf.model
models/hin/: crf.pos.utf.model
models/mar/: crf.chunk.utf.model  crf.pos.utf.model
polyglot-tokenizer/: MANIFEST.in  README.rst  requirements.txt  setup.cfg
polyglot-tokenizer/polyglot_tokenizer/: __init__.py  __main__.py  armenian_tokenizer.py  base.py  cyrillic_tokenizer.py  georgian_tokenizer.py  greek_tokenizer.py  hebrew_tokenizer.py  indic_tokenizer.py  roman_tokenizer.py  tokenizer.py
polyglot-tokenizer/polyglot_tokenizer/data/: DOMAINS  EMOTICONS  nonbreaking_prefixes.de  nonbreaking_prefixes.el  nonbreaking_prefixes.en  nonbreaking_prefixes.es  nonbreaking_prefixes.fi  nonbreaking_prefixes.fr  nonbreaking_prefixes.ga  nonbreaking_prefixes.hu  nonbreaking_prefixes.is  nonbreaking_prefixes.it  nonbreaking_prefixes.lt  nonbreaking_prefixes.lv  nonbreaking_prefixes.nl  nonbreaking_prefixes.pl  nonbreaking_prefixes.pt  nonbreaking_prefixes.ru  nonbreaking_prefixes.sl  nonbreaking_prefixes.sv  nonbreaking_prefixes.ta  nonbreaking_prefixes.zh
polyglot-tokenizer/polyglot_tokenizer/tests/: eng.txt  test_tokenizer.py
tagger/src/: evaluate.py  (+5 more)
(+100 files in other folders)
