[metadata]
name = polyglot-tokenizer
summary = 
    Tokenizer for Indian scripts and Roman script.
    This module provides a complete tokenizer for Indian languages including Urdu, Kashmiri and Roman script.
description-file = 
    README.rst
author =
    Irshad Ahmad Bhat
author-email =
    bhatirshad127@gmail.com
    irshad.bhat@research.iiit.ac.in
maintainer-email =
    bhatirshad127@gmail.com
    irshad.bhat@research.iiit.ac.in
home-page = 
classifier =
    #Framework :: Flask
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research 
    Intended Audience :: Information Technology
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License v3 or later (GNU GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages = 
    polyglot_tokenizer
data_files =
    polyglot_tokenizer/data = polyglot_tokenizer/data/*

[entry_points]
console_scripts =
    polyglot-tokenizer = polyglot_tokenizer:main

[build-sphinx]
all_files = 1
source-dir = docs

[wheel]
universal = 1

